--- a/code/.vscode/launch.json
+++ b/code/.vscode/launch.json
@@ -4,10 +4,11 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+
     {
-      "name": "Debug",
       "type": "lldb-mi",
       "request": "launch",
+      "name": "Launch Program",
       "target": "./target/debug/code",
       "cwd": "${workspaceRoot}",
       "valuesFormatting": "parseText"
