--- a/code/Cargo.toml
+++ b/code/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["jongwhan lee <leejw51@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+
+serde_json=""
