--- a/test_jsclient/Cargo.toml
+++ b/test_jsclient/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+jsonrpc="0.11.0"
+jsonrpc-ws-client = "11.0.0"
+websocket="0.23.0"
