--- a/test_jsclient/Cargo.toml
+++ b/test_jsclient/Cargo.toml
@@ -10,3 +10,6 @@ edition = "2018"
 jsonrpc="0.11.0"
 jsonrpc-ws-client = "11.0.0"
 websocket="0.23.0"
+futures="0.1.28"
+tokio="0.1.22"
+jsonrpc-core-client="13.0.0"
