--- a/test_jsclient/Cargo.toml
+++ b/test_jsclient/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2018"
 
 [dependencies]
 jsonrpc="0.11.0"
-jsonrpc-core=""
+jsonrpc-core="13.0.0"
 websocket="0.23.0"
 futures="0.1.28"
 tokio="0.1.22"
 jsonrpc-client-transports = "13.0.1"
-serde_json=""
+serde_json="1.0.40"
