--- a/test_await/Cargo.toml
+++ b/test_await/Cargo.toml
@@ -1,3 +1,5 @@
+
+
 [package]
 name = "test_await"
 version = "0.1.0"
@@ -7,3 +9,4 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = {git="https://github.com/tokio-rs/tokio.git"}
