--- a/code/Cargo.toml
+++ b/code/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["jongwhan lee <leejw51@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+multiqueue=""
 hex = ""
 serde_json= ""
 serde = { version = "1.0", features = ["derive"] }
