--- a/test_connect/Cargo.toml
+++ b/test_connect/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio="0.1.22"
+quest = "0.3.0"
