--- a/neon_electron/config
+++ b/neon_electron/config
@@ -1,2 +1,5 @@
 [build]
 rustflags = ["-Ctarget-feature=+aes,+ssse3"]
+
+[target.'cfg(windows)']
+rustflags = ["-C", "link-args=/DELAYLOAD:node.exe /INCLUDE:__pfnDliNotifyHook2 delayimp.lib"]
