--- a/test_hdwallet/Cargo.toml
+++ b/test_hdwallet/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 tiny-hderive = "0.2.1"
+secp256k1 = "0.15.5"
 hex = "0.3.2"
 ethsign= "0.6.1"
 tiny-bip39 = "0.6"
