--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,11 @@
 kind: pipeline
-name: default
+type: docker
+name: linux-amd64
 
+platform:
+  arch: amd64
+  os: linux
+  
 steps:
 - name: test
   image: rust:1.30
