--- a/.drone.yml
+++ b/.drone.yml
@@ -24,6 +24,7 @@ platform:
 steps:
 - name: integration
   commands:
+  - export $HOME/.cargo/bin:$PATH
   - export SGX_MODE=HW
   - export NETWORK_ID=ab
   - echo "HOME FOLDER = " $HOME
