--- a/.drone.yml
+++ b/.drone.yml
@@ -33,3 +33,25 @@ steps:
   - rustup default stable
   - cargo build
   
+
+  ---
+kind: pipeline
+type: exec
+name: integration_fail_test
+
+platform:
+  os: linux
+  arch: amd64
+
+steps:
+- name: integration
+  commands:
+  - export PATH=/root/.cargo/bin:$PATH
+  - export SGX_MODE=HW
+  - export NETWORK_ID=ab
+  - echo "HOME FOLDER = " $HOME
+  - pwd
+  - cd test_drone_integration
+  - rustup default stable
+  - cargo build
+  - python a.py
