--- a/test_sparse_merkletrie/Cargo.toml
+++ b/test_sparse_merkletrie/Cargo.toml
@@ -4,6 +4,16 @@ version = "0.1.0"
 authors = ["jongwhan lee <jonghwan@crypto.com>"]
 edition = "2018"
 
+[features]
+default = ["serde"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hex= "0.4.0"
+serde_json=""
+serde = { version = "1.0", features = ["derive"], optional = true }
+serde_derive="1.0.98" 
+bincode= "1.1.4"
+failure="0.1.6"
+blake2=""
+rocksdb=""
