--- a/test_sparse_merkletrie/Cargo.toml
+++ b/test_sparse_merkletrie/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "test_sparse_merkletrie"
 version = "0.1.0"
-authors = ["jongwhan lee <jonghwan@crypto.com>"]
+authors = ["jongwhan lee <leejw51@gmail.com>"]
 edition = "2018"
 
 [features]
@@ -17,3 +17,4 @@ bincode= "1.1.4"
 failure="0.1.6"
 blake2=""
 rocksdb=""
+log=""
