--- a/test_sparse_merkletrie/simple_trie/Cargo.toml
+++ b/test_sparse_merkletrie/simple_trie/Cargo.toml
@@ -10,10 +10,10 @@ default = ["serde"]
 
 [dependencies]
 hex= "0.4.0"
-serde_json=""
+serde_json="1.0.45"
 serde = { version = "1.0", features = ["derive"], optional = true }
-serde_derive="1.0.98" 
-bincode= "1.1.4"
+serde_derive="1.0.104" 
+bincode= "1.2.1"
 failure="0.1.6"
 blake2="0.8.1"
 rocksdb="0.13.0"
