--- a/test_jsonrpc/Cargo.toml
+++ b/test_jsonrpc/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+jsonrpc-http-server="14.0.6"
+jsonrpc-core="14.0.5"
