--- a/test_jsonrpc/Cargo.toml
+++ b/test_jsonrpc/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2018"
 jsonrpc-http-server="14.0.6"
 jsonrpc-core="14.0.5"
 jsonrpc-derive=""
-serde_json = "1.0.48"
 log ="0.4.8"
 jsonrpc-core-client = "14.0"
+serde_json="1.0.48"
+serde="1.0.105"
