--- a/test_bincode/Cargo.toml
+++ b/test_bincode/Cargo.toml
@@ -14,3 +14,5 @@ default = ["serde"]
 bincode="1.2"
 serde_json="1.0.50"
 serde = { version = "1.0.105", features = ["derive"], optional = true }
+hex="0.4.2"
+failure="0.1.7"
