--- a/test_c_binding4_golang/Cargo.toml
+++ b/test_c_binding4_golang/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "fruit"
 version = "0.1.0"
-authors = ["jongwhan lee <jonghwan@gmail.com>"]
+authors = ["jongwhan lee <leejw51@gmail.com>"]
 edition = "2018"
 
 [lib]
