--- a/tungstenite/Cargo.toml
+++ b/tungstenite/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 tokio={version="0.2.21", features=["full"]}
-tokio-tungstenite={versio="0.10.1"}
+tokio-tungstenite={versio="0.10.1",features=["connect","tls"]}
 futures-channel = "0.3"
 url = "2.0.0"
 env_logger = "0.7"
