--- a/test_sqlite/Cargo.toml
+++ b/test_sqlite/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 rusqlite="0.26.0"
 serde_rusqlite="0.28.0"
 serde={version="1.0.130", features=["derive"]}
+serde_json="1.0.68"
+failure="0.1.8"
